--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "name": "desafio3bend",
   "description": "",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {},
